--- a/InClass04_join_twdemo_referendum.html
+++ b/InClass04_join_twdemo_referendum.html
@@ -10,7 +10,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=EDGE" />
 
 
-<meta name="author" content="Jilung Hsieh" />
+<meta name="author" content="Jilung Hsieh, modified by Dennis Tseng" />
 
 
 <title>InClass04_join_twdemo_referendum</title>
@@ -1535,7 +1535,7 @@ div.tocify {
 
 
 <h1 class="title toc-ignore">InClass04_join_twdemo_referendum</h1>
-<h4 class="author">Jilung Hsieh</h4>
+<h4 class="author">Jilung Hsieh, modified by Dennis Tseng</h4>
 <h4 class="date">2019/10/07</h4>
 
 </div>
